// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`stats > appearancesByPlayer 1`] = `
[
  {
    "player": "Big Dave",
    "value": [
      1,
      2,
      3,
      4,
    ],
  },
  {
    "player": "Craig",
    "value": [
      1,
      2,
      3,
      4,
    ],
  },
  {
    "player": "Gaz",
    "value": [
      1,
      2,
      3,
      4,
    ],
  },
  {
    "player": "Jonty",
    "value": [
      1,
      2,
      3,
      4,
    ],
  },
  {
    "player": "Kaggy",
    "value": [
      1,
      2,
      3,
      4,
    ],
  },
  {
    "player": "Leo",
    "value": [
      1,
      2,
      3,
      4,
    ],
  },
  {
    "player": "Marco",
    "value": [
      1,
      2,
      3,
      4,
    ],
  },
  {
    "player": "Ndu",
    "value": [
      1,
      2,
      3,
      4,
    ],
  },
  {
    "player": "Ollie",
    "value": [
      1,
      2,
      3,
      4,
    ],
  },
  {
    "player": "Pieter",
    "value": [
      1,
      2,
      3,
      4,
    ],
  },
  {
    "player": "Ruan",
    "value": [
      1,
      2,
      3,
      4,
    ],
  },
  {
    "player": "Shaun",
    "value": [
      1,
      2,
      3,
      4,
    ],
  },
  {
    "player": "Sipho",
    "value": [
      1,
      2,
      3,
      4,
    ],
  },
  {
    "player": "Thabo",
    "value": [
      1,
      2,
      3,
      4,
    ],
  },
  {
    "player": "Themba",
    "value": [
      1,
      2,
      3,
      4,
    ],
  },
  {
    "player": "Yusuf",
    "value": [
      1,
      2,
      3,
      4,
    ],
  },
]
`;

exports[`stats > badgeCatalogue 1`] = `
[
  {
    "code": "debut",
    "description": "Played your first Wednesday.",
    "emoji": "🎬",
    "name": "Debut",
    "sort_order": 10,
    "tier": "bronze",
  },
  {
    "code": "first_in",
    "description": "First to say yes on the team sheet.",
    "emoji": "⚡",
    "name": "First In",
    "sort_order": 11,
    "tier": "bronze",
  },
  {
    "code": "streak_5",
    "description": "Five Wednesdays in a row.",
    "emoji": "📅",
    "name": "Ever Present",
    "sort_order": 12,
    "tier": "silver",
  },
  {
    "code": "streak_10",
    "description": "Ten Wednesdays in a row. Remarkable.",
    "emoji": "🦾",
    "name": "Iron Man",
    "sort_order": 13,
    "tier": "gold",
  },
  {
    "code": "caps_25",
    "description": "Twenty-five appearances.",
    "emoji": "🎖️",
    "name": "Quarter Century",
    "sort_order": 14,
    "tier": "gold",
  },
  {
    "code": "caps_50",
    "description": "Fifty appearances for the Wednesday league.",
    "emoji": "🗿",
    "name": "Club Legend",
    "sort_order": 15,
    "tier": "legendary",
  },
  {
    "code": "rescuer",
    "description": "Came off the waitlist and saved the numbers.",
    "emoji": "🛟",
    "name": "The Rescuer",
    "sort_order": 16,
    "tier": "silver",
  },
  {
    "code": "first_goal",
    "description": "Scored your first league goal.",
    "emoji": "⚽",
    "name": "Off the Mark",
    "sort_order": 20,
    "tier": "bronze",
  },
  {
    "code": "hat_trick",
    "description": "Three goals in one night.",
    "emoji": "🎩",
    "name": "Hat-trick Hero",
    "sort_order": 21,
    "tier": "gold",
  },
  {
    "code": "four_goals",
    "description": "Four or more in a single game.",
    "emoji": "🦊",
    "name": "Poacher",
    "sort_order": 22,
    "tier": "legendary",
  },
  {
    "code": "goals_10",
    "description": "Ten career goals.",
    "emoji": "🔟",
    "name": "Double Figures",
    "sort_order": 23,
    "tier": "silver",
  },
  {
    "code": "goals_50",
    "description": "Fifty career goals.",
    "emoji": "🏅",
    "name": "Fifty Club",
    "sort_order": 24,
    "tier": "legendary",
  },
  {
    "code": "first_nutmeg",
    "description": "Your first nutmeg. It counts forever.",
    "emoji": "🥜",
    "name": "Through the Legs",
    "sort_order": 30,
    "tier": "bronze",
  },
  {
    "code": "nutmeg_3",
    "description": "Three nutmegs in one night.",
    "emoji": "🪄",
    "name": "Nutmeg Merchant",
    "sort_order": 31,
    "tier": "gold",
  },
  {
    "code": "nutmegs_25",
    "description": "Twenty-five career nutmegs.",
    "emoji": "👑",
    "name": "Panna King",
    "sort_order": 32,
    "tier": "legendary",
  },
  {
    "code": "first_assist",
    "description": "Your first assist.",
    "emoji": "🎁",
    "name": "Provider",
    "sort_order": 40,
    "tier": "bronze",
  },
  {
    "code": "assists_3",
    "description": "Three assists in one night.",
    "emoji": "🪡",
    "name": "Puppet Master",
    "sort_order": 41,
    "tier": "gold",
  },
  {
    "code": "tackles_10",
    "description": "Ten tackles in a single game.",
    "emoji": "🧱",
    "name": "The Wall",
    "sort_order": 50,
    "tier": "silver",
  },
  {
    "code": "clean_sheet",
    "description": "Your team conceded nothing.",
    "emoji": "🧼",
    "name": "Clean Sheet",
    "sort_order": 51,
    "tier": "silver",
  },
  {
    "code": "saves_10",
    "description": "Ten saves in one night in goal.",
    "emoji": "🧤",
    "name": "Safe Hands",
    "sort_order": 52,
    "tier": "gold",
  },
  {
    "code": "motm",
    "description": "Voted the best player on the night.",
    "emoji": "⭐",
    "name": "Man of the Match",
    "sort_order": 60,
    "tier": "silver",
  },
  {
    "code": "motm_5",
    "description": "Five man-of-the-match awards.",
    "emoji": "🌟",
    "name": "Crowd Favourite",
    "sort_order": 61,
    "tier": "gold",
  },
  {
    "code": "humble",
    "description": "Rated yourself modestly, then won the votes anyway.",
    "emoji": "😇",
    "name": "Humble",
    "sort_order": 62,
    "tier": "gold",
  },
  {
    "code": "own_goal",
    "description": "Scored past your own keeper. It happens.",
    "emoji": "🙃",
    "name": "Wrong Net",
    "sort_order": 63,
    "tier": "bronze",
  },
  {
    "code": "full_house",
    "description": "A goal, an assist and a nutmeg in one night.",
    "emoji": "🎰",
    "name": "Full House",
    "sort_order": 64,
    "tier": "legendary",
  },
]
`;

exports[`stats > badgesFor 1`] = `
[
  {
    "code": "streak_5",
    "description": "Five Wednesdays in a row.",
    "earnedAt": "<timestamp>",
    "emoji": "📅",
    "fixtureId": "<uuid-1>",
    "name": "Ever Present",
    "tier": "silver",
  },
  {
    "code": "first_in",
    "description": "First to say yes on the team sheet.",
    "earnedAt": "<timestamp>",
    "emoji": "⚡",
    "fixtureId": "<uuid-1>",
    "name": "First In",
    "tier": "bronze",
  },
  {
    "code": "debut",
    "description": "Played your first Wednesday.",
    "earnedAt": "<timestamp>",
    "emoji": "🎬",
    "fixtureId": "<uuid-1>",
    "name": "Debut",
    "tier": "bronze",
  },
]
`;

exports[`stats > badgesHeldBy 1`] = `
[
  {
    "player": "Leo",
    "value": [
      "debut",
      "first_in",
      "streak_5",
    ],
  },
]
`;

exports[`stats > careerTable 1`] = `
[
  {
    "appearances": 4,
    "assists": 5,
    "displayName": "Big Dave",
    "emoji": "🐻",
    "goals": 7,
    "motmVotes": 15,
    "nutmegs": 6,
    "playerId": "<uuid-1>",
    "rating": 66,
    "saves": 0,
    "tackles": 12,
  },
  {
    "appearances": 4,
    "assists": 3,
    "displayName": "Craig",
    "emoji": "🐢",
    "goals": 7,
    "motmVotes": 15,
    "nutmegs": 3,
    "playerId": "<uuid-2>",
    "rating": 60,
    "saves": 0,
    "tackles": 16,
  },
  {
    "appearances": 4,
    "assists": 3,
    "displayName": "Gaz",
    "emoji": "🪃",
    "goals": 2,
    "motmVotes": 0,
    "nutmegs": 4,
    "playerId": "<uuid-3>",
    "rating": 62,
    "saves": 2,
    "tackles": 13,
  },
  {
    "appearances": 4,
    "assists": 3,
    "displayName": "Jonty",
    "emoji": "🎩",
    "goals": 3,
    "motmVotes": 1,
    "nutmegs": 5,
    "playerId": "<uuid-4>",
    "rating": 69,
    "saves": 4,
    "tackles": 10,
  },
  {
    "appearances": 4,
    "assists": 6,
    "displayName": "Kaggy",
    "emoji": "🐆",
    "goals": 5,
    "motmVotes": 15,
    "nutmegs": 5,
    "playerId": "<uuid-5>",
    "rating": 71,
    "saves": 0,
    "tackles": 4,
  },
  {
    "appearances": 4,
    "assists": 3,
    "displayName": "Leo",
    "emoji": "🦁",
    "goals": 3,
    "motmVotes": 1,
    "nutmegs": 5,
    "playerId": "<uuid-6>",
    "rating": 72.5,
    "saves": 4,
    "tackles": 9,
  },
  {
    "appearances": 4,
    "assists": 3,
    "displayName": "Marco",
    "emoji": "🍕",
    "goals": 8,
    "motmVotes": 0,
    "nutmegs": 6,
    "playerId": "<uuid-7>",
    "rating": 67.5,
    "saves": 6,
    "tackles": 11,
  },
  {
    "appearances": 4,
    "assists": 4,
    "displayName": "Ndu",
    "emoji": "🌟",
    "goals": 3,
    "motmVotes": 0,
    "nutmegs": 4,
    "playerId": "<uuid-8>",
    "rating": 68.5,
    "saves": 6,
    "tackles": 12,
  },
  {
    "appearances": 4,
    "assists": 6,
    "displayName": "Ollie",
    "emoji": "🦅",
    "goals": 1,
    "motmVotes": 0,
    "nutmegs": 4,
    "playerId": "<uuid-9>",
    "rating": 63,
    "saves": 0,
    "tackles": 10,
  },
  {
    "appearances": 4,
    "assists": 4,
    "displayName": "Pieter",
    "emoji": "🧤",
    "goals": 4,
    "motmVotes": 0,
    "nutmegs": 5,
    "playerId": "<uuid-10>",
    "rating": 70,
    "saves": 8,
    "tackles": 19,
  },
  {
    "appearances": 4,
    "assists": 5,
    "displayName": "Ruan",
    "emoji": "🧱",
    "goals": 0,
    "motmVotes": 0,
    "nutmegs": 1,
    "playerId": "<uuid-11>",
    "rating": 64.5,
    "saves": 5,
    "tackles": 11,
  },
  {
    "appearances": 4,
    "assists": 2,
    "displayName": "Shaun",
    "emoji": "🦈",
    "goals": 2,
    "motmVotes": 0,
    "nutmegs": 3,
    "playerId": "<uuid-12>",
    "rating": 65.5,
    "saves": 8,
    "tackles": 13,
  },
  {
    "appearances": 4,
    "assists": 3,
    "displayName": "Sipho",
    "emoji": "⚡",
    "goals": 2,
    "motmVotes": 1,
    "nutmegs": 5,
    "playerId": "<uuid-13>",
    "rating": 78,
    "saves": 0,
    "tackles": 4,
  },
  {
    "appearances": 4,
    "assists": 4,
    "displayName": "Thabo",
    "emoji": "🚀",
    "goals": 8,
    "motmVotes": 15,
    "nutmegs": 5,
    "playerId": "<uuid-14>",
    "rating": 75.5,
    "saves": 0,
    "tackles": 12,
  },
  {
    "appearances": 4,
    "assists": 4,
    "displayName": "Themba",
    "emoji": "🔥",
    "goals": 1,
    "motmVotes": 0,
    "nutmegs": 5,
    "playerId": "<uuid-15>",
    "rating": 74,
    "saves": 6,
    "tackles": 8,
  },
  {
    "appearances": 4,
    "assists": 4,
    "displayName": "Yusuf",
    "emoji": "🌊",
    "goals": 6,
    "motmVotes": 1,
    "nutmegs": 8,
    "playerId": "<uuid-16>",
    "rating": 66.5,
    "saves": 7,
    "tackles": 7,
  },
]
`;

exports[`stats > careerTotals 1`] = `
[
  {
    "player": "Big Dave",
    "value": {
      "appearances": 4,
      "assists": 5,
      "goals": 7,
      "motmAwards": 1,
      "nutmegs": 6,
    },
  },
  {
    "player": "Craig",
    "value": {
      "appearances": 4,
      "assists": 3,
      "goals": 7,
      "motmAwards": 1,
      "nutmegs": 3,
    },
  },
  {
    "player": "Gaz",
    "value": {
      "appearances": 4,
      "assists": 3,
      "goals": 2,
      "motmAwards": 0,
      "nutmegs": 4,
    },
  },
  {
    "player": "Jonty",
    "value": {
      "appearances": 4,
      "assists": 3,
      "goals": 3,
      "motmAwards": 0,
      "nutmegs": 5,
    },
  },
  {
    "player": "Kaggy",
    "value": {
      "appearances": 4,
      "assists": 6,
      "goals": 5,
      "motmAwards": 1,
      "nutmegs": 5,
    },
  },
  {
    "player": "Leo",
    "value": {
      "appearances": 4,
      "assists": 3,
      "goals": 3,
      "motmAwards": 0,
      "nutmegs": 5,
    },
  },
  {
    "player": "Marco",
    "value": {
      "appearances": 4,
      "assists": 3,
      "goals": 8,
      "motmAwards": 0,
      "nutmegs": 6,
    },
  },
  {
    "player": "Ndu",
    "value": {
      "appearances": 4,
      "assists": 4,
      "goals": 3,
      "motmAwards": 0,
      "nutmegs": 4,
    },
  },
  {
    "player": "Ollie",
    "value": {
      "appearances": 4,
      "assists": 6,
      "goals": 1,
      "motmAwards": 0,
      "nutmegs": 4,
    },
  },
  {
    "player": "Pieter",
    "value": {
      "appearances": 4,
      "assists": 4,
      "goals": 4,
      "motmAwards": 0,
      "nutmegs": 5,
    },
  },
  {
    "player": "Ruan",
    "value": {
      "appearances": 4,
      "assists": 5,
      "goals": 0,
      "motmAwards": 0,
      "nutmegs": 1,
    },
  },
  {
    "player": "Shaun",
    "value": {
      "appearances": 4,
      "assists": 2,
      "goals": 2,
      "motmAwards": 0,
      "nutmegs": 3,
    },
  },
  {
    "player": "Sipho",
    "value": {
      "appearances": 4,
      "assists": 3,
      "goals": 2,
      "motmAwards": 0,
      "nutmegs": 5,
    },
  },
  {
    "player": "Thabo",
    "value": {
      "appearances": 4,
      "assists": 4,
      "goals": 8,
      "motmAwards": 1,
      "nutmegs": 5,
    },
  },
  {
    "player": "Themba",
    "value": {
      "appearances": 4,
      "assists": 4,
      "goals": 1,
      "motmAwards": 0,
      "nutmegs": 5,
    },
  },
  {
    "player": "Yusuf",
    "value": {
      "appearances": 4,
      "assists": 4,
      "goals": 6,
      "motmAwards": 0,
      "nutmegs": 8,
    },
  },
]
`;

exports[`stats > currentStreaks 1`] = `
[
  {
    "player": "Big Dave",
    "value": 4,
  },
  {
    "player": "Craig",
    "value": 4,
  },
  {
    "player": "Gaz",
    "value": 4,
  },
  {
    "player": "Jonty",
    "value": 4,
  },
  {
    "player": "Kaggy",
    "value": 4,
  },
  {
    "player": "Leo",
    "value": 4,
  },
  {
    "player": "Marco",
    "value": 4,
  },
  {
    "player": "Ndu",
    "value": 4,
  },
  {
    "player": "Ollie",
    "value": 4,
  },
  {
    "player": "Pieter",
    "value": 4,
  },
  {
    "player": "Ruan",
    "value": 4,
  },
  {
    "player": "Shaun",
    "value": 4,
  },
  {
    "player": "Sipho",
    "value": 4,
  },
  {
    "player": "Thabo",
    "value": 4,
  },
  {
    "player": "Themba",
    "value": 4,
  },
  {
    "player": "Yusuf",
    "value": 4,
  },
]
`;

exports[`stats > fixtureStatRows 1`] = `
[
  {
    "assists": 1,
    "displayName": "Big Dave",
    "emoji": "🐻",
    "fixtureId": "<uuid-2>",
    "goals": 2,
    "goalsAgainst": 9,
    "goalsFor": 7,
    "kickoffAt": "2026-08-12T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 2,
    "outcome": "loss",
    "playerId": "<uuid-1>",
    "saves": 0,
    "tackles": 6,
  },
  {
    "assists": 0,
    "displayName": "Craig",
    "emoji": "🐢",
    "fixtureId": "<uuid-2>",
    "goals": 1,
    "goalsAgainst": 7,
    "goalsFor": 9,
    "kickoffAt": "2026-08-12T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 0,
    "outcome": "win",
    "playerId": "<uuid-3>",
    "saves": 0,
    "tackles": 0,
  },
  {
    "assists": 0,
    "displayName": "Gaz",
    "emoji": "🪃",
    "fixtureId": "<uuid-2>",
    "goals": 0,
    "goalsAgainst": 7,
    "goalsFor": 9,
    "kickoffAt": "2026-08-12T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 2,
    "outcome": "win",
    "playerId": "<uuid-4>",
    "saves": 0,
    "tackles": 1,
  },
  {
    "assists": 0,
    "displayName": "Jonty",
    "emoji": "🎩",
    "fixtureId": "<uuid-2>",
    "goals": 0,
    "goalsAgainst": 9,
    "goalsFor": 7,
    "kickoffAt": "2026-08-12T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 2,
    "outcome": "loss",
    "playerId": "<uuid-5>",
    "saves": 0,
    "tackles": 5,
  },
  {
    "assists": 2,
    "displayName": "Kaggy",
    "emoji": "🐆",
    "fixtureId": "<uuid-2>",
    "goals": 2,
    "goalsAgainst": 9,
    "goalsFor": 7,
    "kickoffAt": "2026-08-12T16:00:00.000Z",
    "motmVotes": 15,
    "nutmegs": 2,
    "outcome": "loss",
    "playerId": "<uuid-6>",
    "saves": 0,
    "tackles": 3,
  },
  {
    "assists": 0,
    "displayName": "Leo",
    "emoji": "🦁",
    "fixtureId": "<uuid-2>",
    "goals": 0,
    "goalsAgainst": 9,
    "goalsFor": 7,
    "kickoffAt": "2026-08-12T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 1,
    "outcome": "loss",
    "playerId": "<uuid-7>",
    "saves": 0,
    "tackles": 0,
  },
  {
    "assists": 1,
    "displayName": "Marco",
    "emoji": "🍕",
    "fixtureId": "<uuid-2>",
    "goals": 2,
    "goalsAgainst": 7,
    "goalsFor": 9,
    "kickoffAt": "2026-08-12T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 2,
    "outcome": "win",
    "playerId": "<uuid-8>",
    "saves": 6,
    "tackles": 0,
  },
  {
    "assists": 1,
    "displayName": "Ndu",
    "emoji": "🌟",
    "fixtureId": "<uuid-2>",
    "goals": 0,
    "goalsAgainst": 7,
    "goalsFor": 9,
    "kickoffAt": "2026-08-12T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 2,
    "outcome": "win",
    "playerId": "<uuid-9>",
    "saves": 0,
    "tackles": 6,
  },
  {
    "assists": 0,
    "displayName": "Ollie",
    "emoji": "🦅",
    "fixtureId": "<uuid-2>",
    "goals": 0,
    "goalsAgainst": 9,
    "goalsFor": 7,
    "kickoffAt": "2026-08-12T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 2,
    "outcome": "loss",
    "playerId": "<uuid-10>",
    "saves": 0,
    "tackles": 2,
  },
  {
    "assists": 2,
    "displayName": "Pieter",
    "emoji": "🧤",
    "fixtureId": "<uuid-2>",
    "goals": 1,
    "goalsAgainst": 9,
    "goalsFor": 7,
    "kickoffAt": "2026-08-12T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 1,
    "outcome": "loss",
    "playerId": "<uuid-11>",
    "saves": 6,
    "tackles": 6,
  },
  {
    "assists": 2,
    "displayName": "Ruan",
    "emoji": "🧱",
    "fixtureId": "<uuid-2>",
    "goals": 0,
    "goalsAgainst": 7,
    "goalsFor": 9,
    "kickoffAt": "2026-08-12T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 0,
    "outcome": "win",
    "playerId": "<uuid-12>",
    "saves": 0,
    "tackles": 1,
  },
  {
    "assists": 0,
    "displayName": "Shaun",
    "emoji": "🦈",
    "fixtureId": "<uuid-2>",
    "goals": 2,
    "goalsAgainst": 7,
    "goalsFor": 9,
    "kickoffAt": "2026-08-12T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 2,
    "outcome": "win",
    "playerId": "<uuid-13>",
    "saves": 0,
    "tackles": 6,
  },
  {
    "assists": 1,
    "displayName": "Sipho",
    "emoji": "⚡",
    "fixtureId": "<uuid-2>",
    "goals": 2,
    "goalsAgainst": 7,
    "goalsFor": 9,
    "kickoffAt": "2026-08-12T16:00:00.000Z",
    "motmVotes": 1,
    "nutmegs": 1,
    "outcome": "win",
    "playerId": "<uuid-14>",
    "saves": 0,
    "tackles": 2,
  },
  {
    "assists": 1,
    "displayName": "Thabo",
    "emoji": "🚀",
    "fixtureId": "<uuid-2>",
    "goals": 2,
    "goalsAgainst": 7,
    "goalsFor": 9,
    "kickoffAt": "2026-08-12T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 2,
    "outcome": "win",
    "playerId": "<uuid-15>",
    "saves": 0,
    "tackles": 4,
  },
  {
    "assists": 0,
    "displayName": "Themba",
    "emoji": "🔥",
    "fixtureId": "<uuid-2>",
    "goals": 1,
    "goalsAgainst": 9,
    "goalsFor": 7,
    "kickoffAt": "2026-08-12T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 1,
    "outcome": "loss",
    "playerId": "<uuid-16>",
    "saves": 0,
    "tackles": 3,
  },
  {
    "assists": 1,
    "displayName": "Yusuf",
    "emoji": "🌊",
    "fixtureId": "<uuid-2>",
    "goals": 1,
    "goalsAgainst": 9,
    "goalsFor": 7,
    "kickoffAt": "2026-08-12T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 2,
    "outcome": "loss",
    "playerId": "<uuid-17>",
    "saves": 0,
    "tackles": 1,
  },
  {
    "assists": 2,
    "displayName": "Big Dave",
    "emoji": "🐻",
    "fixtureId": "<uuid-18>",
    "goals": 2,
    "goalsAgainst": 8,
    "goalsFor": 9,
    "kickoffAt": "2026-08-19T16:00:00.000Z",
    "motmVotes": 15,
    "nutmegs": 0,
    "outcome": "win",
    "playerId": "<uuid-1>",
    "saves": 0,
    "tackles": 1,
  },
  {
    "assists": 0,
    "displayName": "Craig",
    "emoji": "🐢",
    "fixtureId": "<uuid-18>",
    "goals": 2,
    "goalsAgainst": 9,
    "goalsFor": 8,
    "kickoffAt": "2026-08-19T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 0,
    "outcome": "loss",
    "playerId": "<uuid-3>",
    "saves": 0,
    "tackles": 5,
  },
  {
    "assists": 1,
    "displayName": "Gaz",
    "emoji": "🪃",
    "fixtureId": "<uuid-18>",
    "goals": 0,
    "goalsAgainst": 9,
    "goalsFor": 8,
    "kickoffAt": "2026-08-19T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 0,
    "outcome": "loss",
    "playerId": "<uuid-4>",
    "saves": 2,
    "tackles": 1,
  },
  {
    "assists": 1,
    "displayName": "Jonty",
    "emoji": "🎩",
    "fixtureId": "<uuid-18>",
    "goals": 2,
    "goalsAgainst": 8,
    "goalsFor": 9,
    "kickoffAt": "2026-08-19T16:00:00.000Z",
    "motmVotes": 1,
    "nutmegs": 1,
    "outcome": "win",
    "playerId": "<uuid-5>",
    "saves": 0,
    "tackles": 4,
  },
  {
    "assists": 2,
    "displayName": "Kaggy",
    "emoji": "🐆",
    "fixtureId": "<uuid-18>",
    "goals": 1,
    "goalsAgainst": 8,
    "goalsFor": 9,
    "kickoffAt": "2026-08-19T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 1,
    "outcome": "win",
    "playerId": "<uuid-6>",
    "saves": 0,
    "tackles": 0,
  },
  {
    "assists": 0,
    "displayName": "Leo",
    "emoji": "🦁",
    "fixtureId": "<uuid-18>",
    "goals": 1,
    "goalsAgainst": 8,
    "goalsFor": 9,
    "kickoffAt": "2026-08-19T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 2,
    "outcome": "win",
    "playerId": "<uuid-7>",
    "saves": 4,
    "tackles": 3,
  },
  {
    "assists": 1,
    "displayName": "Marco",
    "emoji": "🍕",
    "fixtureId": "<uuid-18>",
    "goals": 2,
    "goalsAgainst": 9,
    "goalsFor": 8,
    "kickoffAt": "2026-08-19T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 2,
    "outcome": "loss",
    "playerId": "<uuid-8>",
    "saves": 0,
    "tackles": 3,
  },
  {
    "assists": 1,
    "displayName": "Ndu",
    "emoji": "🌟",
    "fixtureId": "<uuid-18>",
    "goals": 2,
    "goalsAgainst": 9,
    "goalsFor": 8,
    "kickoffAt": "2026-08-19T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 1,
    "outcome": "loss",
    "playerId": "<uuid-9>",
    "saves": 6,
    "tackles": 0,
  },
  {
    "assists": 2,
    "displayName": "Ollie",
    "emoji": "🦅",
    "fixtureId": "<uuid-18>",
    "goals": 0,
    "goalsAgainst": 8,
    "goalsFor": 9,
    "kickoffAt": "2026-08-19T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 1,
    "outcome": "win",
    "playerId": "<uuid-10>",
    "saves": 0,
    "tackles": 0,
  },
  {
    "assists": 2,
    "displayName": "Pieter",
    "emoji": "🧤",
    "fixtureId": "<uuid-18>",
    "goals": 1,
    "goalsAgainst": 8,
    "goalsFor": 9,
    "kickoffAt": "2026-08-19T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 2,
    "outcome": "win",
    "playerId": "<uuid-11>",
    "saves": 0,
    "tackles": 5,
  },
  {
    "assists": 1,
    "displayName": "Ruan",
    "emoji": "🧱",
    "fixtureId": "<uuid-18>",
    "goals": 0,
    "goalsAgainst": 9,
    "goalsFor": 8,
    "kickoffAt": "2026-08-19T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 0,
    "outcome": "loss",
    "playerId": "<uuid-12>",
    "saves": 0,
    "tackles": 1,
  },
  {
    "assists": 2,
    "displayName": "Shaun",
    "emoji": "🦈",
    "fixtureId": "<uuid-18>",
    "goals": 0,
    "goalsAgainst": 9,
    "goalsFor": 8,
    "kickoffAt": "2026-08-19T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 0,
    "outcome": "loss",
    "playerId": "<uuid-13>",
    "saves": 5,
    "tackles": 0,
  },
  {
    "assists": 1,
    "displayName": "Sipho",
    "emoji": "⚡",
    "fixtureId": "<uuid-18>",
    "goals": 0,
    "goalsAgainst": 9,
    "goalsFor": 8,
    "kickoffAt": "2026-08-19T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 0,
    "outcome": "loss",
    "playerId": "<uuid-14>",
    "saves": 0,
    "tackles": 1,
  },
  {
    "assists": 0,
    "displayName": "Thabo",
    "emoji": "🚀",
    "fixtureId": "<uuid-18>",
    "goals": 2,
    "goalsAgainst": 9,
    "goalsFor": 8,
    "kickoffAt": "2026-08-19T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 2,
    "outcome": "loss",
    "playerId": "<uuid-15>",
    "saves": 0,
    "tackles": 2,
  },
  {
    "assists": 0,
    "displayName": "Themba",
    "emoji": "🔥",
    "fixtureId": "<uuid-18>",
    "goals": 0,
    "goalsAgainst": 8,
    "goalsFor": 9,
    "kickoffAt": "2026-08-19T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 1,
    "outcome": "win",
    "playerId": "<uuid-16>",
    "saves": 0,
    "tackles": 0,
  },
  {
    "assists": 0,
    "displayName": "Yusuf",
    "emoji": "🌊",
    "fixtureId": "<uuid-18>",
    "goals": 2,
    "goalsAgainst": 8,
    "goalsFor": 9,
    "kickoffAt": "2026-08-19T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 2,
    "outcome": "win",
    "playerId": "<uuid-17>",
    "saves": 0,
    "tackles": 3,
  },
  {
    "assists": 0,
    "displayName": "Big Dave",
    "emoji": "🐻",
    "fixtureId": "<uuid-19>",
    "goals": 2,
    "goalsAgainst": 7,
    "goalsFor": 8,
    "kickoffAt": "2026-08-26T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 2,
    "outcome": "win",
    "playerId": "<uuid-1>",
    "saves": 0,
    "tackles": 5,
  },
  {
    "assists": 2,
    "displayName": "Craig",
    "emoji": "🐢",
    "fixtureId": "<uuid-19>",
    "goals": 2,
    "goalsAgainst": 8,
    "goalsFor": 7,
    "kickoffAt": "2026-08-26T16:00:00.000Z",
    "motmVotes": 15,
    "nutmegs": 2,
    "outcome": "loss",
    "playerId": "<uuid-3>",
    "saves": 0,
    "tackles": 6,
  },
  {
    "assists": 1,
    "displayName": "Gaz",
    "emoji": "🪃",
    "fixtureId": "<uuid-19>",
    "goals": 0,
    "goalsAgainst": 8,
    "goalsFor": 7,
    "kickoffAt": "2026-08-26T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 2,
    "outcome": "loss",
    "playerId": "<uuid-4>",
    "saves": 0,
    "tackles": 6,
  },
  {
    "assists": 1,
    "displayName": "Jonty",
    "emoji": "🎩",
    "fixtureId": "<uuid-19>",
    "goals": 0,
    "goalsAgainst": 7,
    "goalsFor": 8,
    "kickoffAt": "2026-08-26T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 0,
    "outcome": "win",
    "playerId": "<uuid-5>",
    "saves": 0,
    "tackles": 0,
  },
  {
    "assists": 1,
    "displayName": "Kaggy",
    "emoji": "🐆",
    "fixtureId": "<uuid-19>",
    "goals": 1,
    "goalsAgainst": 7,
    "goalsFor": 8,
    "kickoffAt": "2026-08-26T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 1,
    "outcome": "win",
    "playerId": "<uuid-6>",
    "saves": 0,
    "tackles": 1,
  },
  {
    "assists": 1,
    "displayName": "Leo",
    "emoji": "🦁",
    "fixtureId": "<uuid-19>",
    "goals": 2,
    "goalsAgainst": 7,
    "goalsFor": 8,
    "kickoffAt": "2026-08-26T16:00:00.000Z",
    "motmVotes": 1,
    "nutmegs": 0,
    "outcome": "win",
    "playerId": "<uuid-7>",
    "saves": 0,
    "tackles": 6,
  },
  {
    "assists": 0,
    "displayName": "Marco",
    "emoji": "🍕",
    "fixtureId": "<uuid-19>",
    "goals": 2,
    "goalsAgainst": 8,
    "goalsFor": 7,
    "kickoffAt": "2026-08-26T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 0,
    "outcome": "loss",
    "playerId": "<uuid-8>",
    "saves": 0,
    "tackles": 6,
  },
  {
    "assists": 1,
    "displayName": "Ndu",
    "emoji": "🌟",
    "fixtureId": "<uuid-19>",
    "goals": 1,
    "goalsAgainst": 8,
    "goalsFor": 7,
    "kickoffAt": "2026-08-26T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 0,
    "outcome": "loss",
    "playerId": "<uuid-9>",
    "saves": 0,
    "tackles": 1,
  },
  {
    "assists": 2,
    "displayName": "Ollie",
    "emoji": "🦅",
    "fixtureId": "<uuid-19>",
    "goals": 0,
    "goalsAgainst": 7,
    "goalsFor": 8,
    "kickoffAt": "2026-08-26T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 0,
    "outcome": "win",
    "playerId": "<uuid-10>",
    "saves": 0,
    "tackles": 5,
  },
  {
    "assists": 0,
    "displayName": "Pieter",
    "emoji": "🧤",
    "fixtureId": "<uuid-19>",
    "goals": 2,
    "goalsAgainst": 7,
    "goalsFor": 8,
    "kickoffAt": "2026-08-26T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 2,
    "outcome": "win",
    "playerId": "<uuid-11>",
    "saves": 0,
    "tackles": 3,
  },
  {
    "assists": 1,
    "displayName": "Ruan",
    "emoji": "🧱",
    "fixtureId": "<uuid-19>",
    "goals": 0,
    "goalsAgainst": 8,
    "goalsFor": 7,
    "kickoffAt": "2026-08-26T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 0,
    "outcome": "loss",
    "playerId": "<uuid-12>",
    "saves": 0,
    "tackles": 5,
  },
  {
    "assists": 0,
    "displayName": "Shaun",
    "emoji": "🦈",
    "fixtureId": "<uuid-19>",
    "goals": 0,
    "goalsAgainst": 8,
    "goalsFor": 7,
    "kickoffAt": "2026-08-26T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 1,
    "outcome": "loss",
    "playerId": "<uuid-13>",
    "saves": 3,
    "tackles": 5,
  },
  {
    "assists": 1,
    "displayName": "Sipho",
    "emoji": "⚡",
    "fixtureId": "<uuid-19>",
    "goals": 0,
    "goalsAgainst": 8,
    "goalsFor": 7,
    "kickoffAt": "2026-08-26T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 2,
    "outcome": "loss",
    "playerId": "<uuid-14>",
    "saves": 0,
    "tackles": 1,
  },
  {
    "assists": 1,
    "displayName": "Thabo",
    "emoji": "🚀",
    "fixtureId": "<uuid-19>",
    "goals": 2,
    "goalsAgainst": 8,
    "goalsFor": 7,
    "kickoffAt": "2026-08-26T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 0,
    "outcome": "loss",
    "playerId": "<uuid-15>",
    "saves": 0,
    "tackles": 1,
  },
  {
    "assists": 2,
    "displayName": "Themba",
    "emoji": "🔥",
    "fixtureId": "<uuid-19>",
    "goals": 0,
    "goalsAgainst": 7,
    "goalsFor": 8,
    "kickoffAt": "2026-08-26T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 2,
    "outcome": "win",
    "playerId": "<uuid-16>",
    "saves": 2,
    "tackles": 4,
  },
  {
    "assists": 1,
    "displayName": "Yusuf",
    "emoji": "🌊",
    "fixtureId": "<uuid-19>",
    "goals": 1,
    "goalsAgainst": 7,
    "goalsFor": 8,
    "kickoffAt": "2026-08-26T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 2,
    "outcome": "win",
    "playerId": "<uuid-17>",
    "saves": 7,
    "tackles": 3,
  },
  {
    "assists": 2,
    "displayName": "Big Dave",
    "emoji": "🐻",
    "fixtureId": "<uuid-20>",
    "goals": 1,
    "goalsAgainst": 8,
    "goalsFor": 6,
    "kickoffAt": "2026-09-02T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 2,
    "outcome": "loss",
    "playerId": "<uuid-1>",
    "saves": 0,
    "tackles": 0,
  },
  {
    "assists": 1,
    "displayName": "Craig",
    "emoji": "🐢",
    "fixtureId": "<uuid-20>",
    "goals": 2,
    "goalsAgainst": 6,
    "goalsFor": 8,
    "kickoffAt": "2026-09-02T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 1,
    "outcome": "win",
    "playerId": "<uuid-3>",
    "saves": 0,
    "tackles": 5,
  },
  {
    "assists": 1,
    "displayName": "Gaz",
    "emoji": "🪃",
    "fixtureId": "<uuid-20>",
    "goals": 2,
    "goalsAgainst": 6,
    "goalsFor": 8,
    "kickoffAt": "2026-09-02T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 0,
    "outcome": "win",
    "playerId": "<uuid-4>",
    "saves": 0,
    "tackles": 5,
  },
  {
    "assists": 1,
    "displayName": "Jonty",
    "emoji": "🎩",
    "fixtureId": "<uuid-20>",
    "goals": 1,
    "goalsAgainst": 8,
    "goalsFor": 6,
    "kickoffAt": "2026-09-02T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 2,
    "outcome": "loss",
    "playerId": "<uuid-5>",
    "saves": 4,
    "tackles": 1,
  },
  {
    "assists": 1,
    "displayName": "Kaggy",
    "emoji": "🐆",
    "fixtureId": "<uuid-20>",
    "goals": 1,
    "goalsAgainst": 8,
    "goalsFor": 6,
    "kickoffAt": "2026-09-02T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 1,
    "outcome": "loss",
    "playerId": "<uuid-6>",
    "saves": 0,
    "tackles": 0,
  },
  {
    "assists": 2,
    "displayName": "Leo",
    "emoji": "🦁",
    "fixtureId": "<uuid-20>",
    "goals": 0,
    "goalsAgainst": 8,
    "goalsFor": 6,
    "kickoffAt": "2026-09-02T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 2,
    "outcome": "loss",
    "playerId": "<uuid-7>",
    "saves": 0,
    "tackles": 0,
  },
  {
    "assists": 1,
    "displayName": "Marco",
    "emoji": "🍕",
    "fixtureId": "<uuid-20>",
    "goals": 2,
    "goalsAgainst": 6,
    "goalsFor": 8,
    "kickoffAt": "2026-09-02T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 2,
    "outcome": "win",
    "playerId": "<uuid-8>",
    "saves": 0,
    "tackles": 2,
  },
  {
    "assists": 1,
    "displayName": "Ndu",
    "emoji": "🌟",
    "fixtureId": "<uuid-20>",
    "goals": 0,
    "goalsAgainst": 6,
    "goalsFor": 8,
    "kickoffAt": "2026-09-02T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 1,
    "outcome": "win",
    "playerId": "<uuid-9>",
    "saves": 0,
    "tackles": 5,
  },
  {
    "assists": 2,
    "displayName": "Ollie",
    "emoji": "🦅",
    "fixtureId": "<uuid-20>",
    "goals": 1,
    "goalsAgainst": 8,
    "goalsFor": 6,
    "kickoffAt": "2026-09-02T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 1,
    "outcome": "loss",
    "playerId": "<uuid-10>",
    "saves": 0,
    "tackles": 3,
  },
  {
    "assists": 0,
    "displayName": "Pieter",
    "emoji": "🧤",
    "fixtureId": "<uuid-20>",
    "goals": 0,
    "goalsAgainst": 8,
    "goalsFor": 6,
    "kickoffAt": "2026-09-02T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 0,
    "outcome": "loss",
    "playerId": "<uuid-11>",
    "saves": 2,
    "tackles": 5,
  },
  {
    "assists": 1,
    "displayName": "Ruan",
    "emoji": "🧱",
    "fixtureId": "<uuid-20>",
    "goals": 0,
    "goalsAgainst": 6,
    "goalsFor": 8,
    "kickoffAt": "2026-09-02T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 1,
    "outcome": "win",
    "playerId": "<uuid-12>",
    "saves": 5,
    "tackles": 4,
  },
  {
    "assists": 0,
    "displayName": "Shaun",
    "emoji": "🦈",
    "fixtureId": "<uuid-20>",
    "goals": 0,
    "goalsAgainst": 6,
    "goalsFor": 8,
    "kickoffAt": "2026-09-02T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 0,
    "outcome": "win",
    "playerId": "<uuid-13>",
    "saves": 0,
    "tackles": 2,
  },
  {
    "assists": 0,
    "displayName": "Sipho",
    "emoji": "⚡",
    "fixtureId": "<uuid-20>",
    "goals": 0,
    "goalsAgainst": 6,
    "goalsFor": 8,
    "kickoffAt": "2026-09-02T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 2,
    "outcome": "win",
    "playerId": "<uuid-14>",
    "saves": 0,
    "tackles": 0,
  },
  {
    "assists": 2,
    "displayName": "Thabo",
    "emoji": "🚀",
    "fixtureId": "<uuid-20>",
    "goals": 2,
    "goalsAgainst": 6,
    "goalsFor": 8,
    "kickoffAt": "2026-09-02T16:00:00.000Z",
    "motmVotes": 15,
    "nutmegs": 1,
    "outcome": "win",
    "playerId": "<uuid-15>",
    "saves": 0,
    "tackles": 5,
  },
  {
    "assists": 2,
    "displayName": "Themba",
    "emoji": "🔥",
    "fixtureId": "<uuid-20>",
    "goals": 0,
    "goalsAgainst": 8,
    "goalsFor": 6,
    "kickoffAt": "2026-09-02T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 1,
    "outcome": "loss",
    "playerId": "<uuid-16>",
    "saves": 4,
    "tackles": 1,
  },
  {
    "assists": 2,
    "displayName": "Yusuf",
    "emoji": "🌊",
    "fixtureId": "<uuid-20>",
    "goals": 2,
    "goalsAgainst": 8,
    "goalsFor": 6,
    "kickoffAt": "2026-09-02T16:00:00.000Z",
    "motmVotes": 1,
    "nutmegs": 2,
    "outcome": "loss",
    "playerId": "<uuid-17>",
    "saves": 0,
    "tackles": 0,
  },
]
`;

exports[`stats > playedFixtureIds 1`] = `
[
  4,
  3,
  2,
  1,
]
`;

exports[`stats > playerNames 1`] = `
[
  {
    "player": "Big Dave",
    "value": {
      "displayName": "Big Dave",
      "emoji": "🐻",
    },
  },
  {
    "player": "Craig",
    "value": {
      "displayName": "Craig",
      "emoji": "🐢",
    },
  },
  {
    "player": "Gaz",
    "value": {
      "displayName": "Gaz",
      "emoji": "🪃",
    },
  },
  {
    "player": "Jonty",
    "value": {
      "displayName": "Jonty",
      "emoji": "🎩",
    },
  },
  {
    "player": "Kaggy",
    "value": {
      "displayName": "Kaggy",
      "emoji": "🐆",
    },
  },
  {
    "player": "Leo",
    "value": {
      "displayName": "Leo",
      "emoji": "🦁",
    },
  },
  {
    "player": "Marco",
    "value": {
      "displayName": "Marco",
      "emoji": "🍕",
    },
  },
  {
    "player": "Ndu",
    "value": {
      "displayName": "Ndu",
      "emoji": "🌟",
    },
  },
  {
    "player": "Ollie",
    "value": {
      "displayName": "Ollie",
      "emoji": "🦅",
    },
  },
  {
    "player": "Pieter",
    "value": {
      "displayName": "Pieter",
      "emoji": "🧤",
    },
  },
  {
    "player": "Ruan",
    "value": {
      "displayName": "Ruan",
      "emoji": "🧱",
    },
  },
  {
    "player": "Shaun",
    "value": {
      "displayName": "Shaun",
      "emoji": "🦈",
    },
  },
  {
    "player": "Sipho",
    "value": {
      "displayName": "Sipho",
      "emoji": "⚡",
    },
  },
  {
    "player": "Thabo",
    "value": {
      "displayName": "Thabo",
      "emoji": "🚀",
    },
  },
  {
    "player": "Themba",
    "value": {
      "displayName": "Themba",
      "emoji": "🔥",
    },
  },
  {
    "player": "Yusuf",
    "value": {
      "displayName": "Yusuf",
      "emoji": "🌊",
    },
  },
]
`;

exports[`stats > recentForm 1`] = `
[
  {
    "at": "2026-08-29T16:00:00.000Z",
    "delta": 1,
    "fixtureId": "<uuid-1>",
    "outcome": "loss",
    "ratingAfter": 69,
    "reason": "played",
  },
  {
    "at": "2026-08-22T16:00:00.000Z",
    "delta": 1,
    "fixtureId": "<uuid-2>",
    "outcome": "win",
    "ratingAfter": 68,
    "reason": "played",
  },
  {
    "at": "2026-08-15T16:00:00.000Z",
    "delta": 1,
    "fixtureId": "<uuid-3>",
    "outcome": "win",
    "ratingAfter": 67,
    "reason": "played",
  },
  {
    "at": "2026-08-08T16:00:00.000Z",
    "delta": 1,
    "fixtureId": "<uuid-4>",
    "outcome": "loss",
    "ratingAfter": 66,
    "reason": "played",
  },
]
`;

exports[`stats > seasonTable 1`] = `
[
  {
    "appearances": 4,
    "assists": 5,
    "avgSelfRating": 8.75,
    "displayName": "Big Dave",
    "draws": 0,
    "emoji": "🐻",
    "goals": 7,
    "losses": 2,
    "motmVotes": 15,
    "nutmegs": 6,
    "ownGoals": 0,
    "playerId": "<uuid-1>",
    "rating": 66,
    "saves": 0,
    "tackles": 12,
    "wins": 2,
  },
  {
    "appearances": 4,
    "assists": 3,
    "avgSelfRating": 6.5,
    "displayName": "Craig",
    "draws": 0,
    "emoji": "🐢",
    "goals": 7,
    "losses": 2,
    "motmVotes": 15,
    "nutmegs": 3,
    "ownGoals": 0,
    "playerId": "<uuid-2>",
    "rating": 60,
    "saves": 0,
    "tackles": 16,
    "wins": 2,
  },
  {
    "appearances": 4,
    "assists": 3,
    "avgSelfRating": 6.5,
    "displayName": "Gaz",
    "draws": 0,
    "emoji": "🪃",
    "goals": 2,
    "losses": 2,
    "motmVotes": 0,
    "nutmegs": 4,
    "ownGoals": 0,
    "playerId": "<uuid-3>",
    "rating": 62,
    "saves": 2,
    "tackles": 13,
    "wins": 2,
  },
  {
    "appearances": 4,
    "assists": 3,
    "avgSelfRating": 8.75,
    "displayName": "Jonty",
    "draws": 0,
    "emoji": "🎩",
    "goals": 3,
    "losses": 2,
    "motmVotes": 1,
    "nutmegs": 5,
    "ownGoals": 0,
    "playerId": "<uuid-4>",
    "rating": 69,
    "saves": 4,
    "tackles": 10,
    "wins": 2,
  },
  {
    "appearances": 4,
    "assists": 6,
    "avgSelfRating": 7,
    "displayName": "Kaggy",
    "draws": 0,
    "emoji": "🐆",
    "goals": 5,
    "losses": 2,
    "motmVotes": 15,
    "nutmegs": 5,
    "ownGoals": 0,
    "playerId": "<uuid-5>",
    "rating": 71,
    "saves": 0,
    "tackles": 4,
    "wins": 2,
  },
  {
    "appearances": 4,
    "assists": 3,
    "avgSelfRating": 6.5,
    "displayName": "Leo",
    "draws": 0,
    "emoji": "🦁",
    "goals": 3,
    "losses": 2,
    "motmVotes": 1,
    "nutmegs": 5,
    "ownGoals": 0,
    "playerId": "<uuid-6>",
    "rating": 72.5,
    "saves": 4,
    "tackles": 9,
    "wins": 2,
  },
  {
    "appearances": 4,
    "assists": 3,
    "avgSelfRating": 6,
    "displayName": "Marco",
    "draws": 0,
    "emoji": "🍕",
    "goals": 8,
    "losses": 2,
    "motmVotes": 0,
    "nutmegs": 6,
    "ownGoals": 0,
    "playerId": "<uuid-7>",
    "rating": 67.5,
    "saves": 6,
    "tackles": 11,
    "wins": 2,
  },
  {
    "appearances": 4,
    "assists": 4,
    "avgSelfRating": 7.5,
    "displayName": "Ndu",
    "draws": 0,
    "emoji": "🌟",
    "goals": 3,
    "losses": 2,
    "motmVotes": 0,
    "nutmegs": 4,
    "ownGoals": 0,
    "playerId": "<uuid-8>",
    "rating": 68.5,
    "saves": 6,
    "tackles": 12,
    "wins": 2,
  },
  {
    "appearances": 4,
    "assists": 6,
    "avgSelfRating": 6.25,
    "displayName": "Ollie",
    "draws": 0,
    "emoji": "🦅",
    "goals": 1,
    "losses": 2,
    "motmVotes": 0,
    "nutmegs": 4,
    "ownGoals": 0,
    "playerId": "<uuid-9>",
    "rating": 63,
    "saves": 0,
    "tackles": 10,
    "wins": 2,
  },
  {
    "appearances": 4,
    "assists": 4,
    "avgSelfRating": 6.75,
    "displayName": "Pieter",
    "draws": 0,
    "emoji": "🧤",
    "goals": 4,
    "losses": 2,
    "motmVotes": 0,
    "nutmegs": 5,
    "ownGoals": 0,
    "playerId": "<uuid-10>",
    "rating": 70,
    "saves": 8,
    "tackles": 19,
    "wins": 2,
  },
  {
    "appearances": 4,
    "assists": 5,
    "avgSelfRating": 8.25,
    "displayName": "Ruan",
    "draws": 0,
    "emoji": "🧱",
    "goals": 0,
    "losses": 2,
    "motmVotes": 0,
    "nutmegs": 1,
    "ownGoals": 0,
    "playerId": "<uuid-11>",
    "rating": 64.5,
    "saves": 5,
    "tackles": 11,
    "wins": 2,
  },
  {
    "appearances": 4,
    "assists": 2,
    "avgSelfRating": 9,
    "displayName": "Shaun",
    "draws": 0,
    "emoji": "🦈",
    "goals": 2,
    "losses": 2,
    "motmVotes": 0,
    "nutmegs": 3,
    "ownGoals": 1,
    "playerId": "<uuid-12>",
    "rating": 65.5,
    "saves": 8,
    "tackles": 13,
    "wins": 2,
  },
  {
    "appearances": 4,
    "assists": 3,
    "avgSelfRating": 6.25,
    "displayName": "Sipho",
    "draws": 0,
    "emoji": "⚡",
    "goals": 2,
    "losses": 2,
    "motmVotes": 1,
    "nutmegs": 5,
    "ownGoals": 0,
    "playerId": "<uuid-13>",
    "rating": 78,
    "saves": 0,
    "tackles": 4,
    "wins": 2,
  },
  {
    "appearances": 4,
    "assists": 4,
    "avgSelfRating": 6.25,
    "displayName": "Thabo",
    "draws": 0,
    "emoji": "🚀",
    "goals": 8,
    "losses": 2,
    "motmVotes": 15,
    "nutmegs": 5,
    "ownGoals": 0,
    "playerId": "<uuid-14>",
    "rating": 75.5,
    "saves": 0,
    "tackles": 12,
    "wins": 2,
  },
  {
    "appearances": 4,
    "assists": 4,
    "avgSelfRating": 6,
    "displayName": "Themba",
    "draws": 0,
    "emoji": "🔥",
    "goals": 1,
    "losses": 2,
    "motmVotes": 0,
    "nutmegs": 5,
    "ownGoals": 0,
    "playerId": "<uuid-15>",
    "rating": 74,
    "saves": 6,
    "tackles": 8,
    "wins": 2,
  },
  {
    "appearances": 4,
    "assists": 4,
    "avgSelfRating": 8.75,
    "displayName": "Yusuf",
    "draws": 0,
    "emoji": "🌊",
    "goals": 6,
    "losses": 2,
    "motmVotes": 1,
    "nutmegs": 8,
    "ownGoals": 0,
    "playerId": "<uuid-16>",
    "rating": 66.5,
    "saves": 7,
    "tackles": 7,
    "wins": 2,
  },
]
`;

exports[`stats > streakInputs 1`] = `
{
  "byPlayer": [
    {
      "appearedInWeeks": [
        1,
        2,
        3,
        4,
      ],
      "displayName": "Big Dave",
    },
    {
      "appearedInWeeks": [
        1,
        2,
        3,
        4,
      ],
      "displayName": "Craig",
    },
    {
      "appearedInWeeks": [
        1,
        2,
        3,
        4,
      ],
      "displayName": "Gaz",
    },
    {
      "appearedInWeeks": [
        1,
        2,
        3,
        4,
      ],
      "displayName": "Jonty",
    },
    {
      "appearedInWeeks": [
        1,
        2,
        3,
        4,
      ],
      "displayName": "Kaggy",
    },
    {
      "appearedInWeeks": [
        1,
        2,
        3,
        4,
      ],
      "displayName": "Leo",
    },
    {
      "appearedInWeeks": [
        1,
        2,
        3,
        4,
      ],
      "displayName": "Marco",
    },
    {
      "appearedInWeeks": [
        1,
        2,
        3,
        4,
      ],
      "displayName": "Ndu",
    },
    {
      "appearedInWeeks": [
        1,
        2,
        3,
        4,
      ],
      "displayName": "Ollie",
    },
    {
      "appearedInWeeks": [
        1,
        2,
        3,
        4,
      ],
      "displayName": "Pieter",
    },
    {
      "appearedInWeeks": [
        1,
        2,
        3,
        4,
      ],
      "displayName": "Ruan",
    },
    {
      "appearedInWeeks": [
        1,
        2,
        3,
        4,
      ],
      "displayName": "Shaun",
    },
    {
      "appearedInWeeks": [
        1,
        2,
        3,
        4,
      ],
      "displayName": "Sipho",
    },
    {
      "appearedInWeeks": [
        1,
        2,
        3,
        4,
      ],
      "displayName": "Thabo",
    },
    {
      "appearedInWeeks": [
        1,
        2,
        3,
        4,
      ],
      "displayName": "Themba",
    },
    {
      "appearedInWeeks": [
        1,
        2,
        3,
        4,
      ],
      "displayName": "Yusuf",
    },
  ],
  "weeks": 4,
}
`;
